AHS: need to specifically delete tarfiles after all
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194417 13f79535-47bb-0310-9956-ffa450edef68

--- a/build.xml
+++ b/build.xml
@@ -669,6 +669,7 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
     <zip zipfile="${Name}-${version}-src.zip" basedir="${dist.src.dir}" includes="**"/>
     <tar tarfile="${Name}-${version}-src.tar" basedir="${dist.src.dir}" includes="**"/>
     <gzip zipfile="${Name}-${version}-src.tar.gz" src="${Name}-${version}-src.tar" />
+    <delete file="${Name}-${version}-src.tar"/>
 
   </target>
 
