--- a/build.xml
+++ b/build.xml
@@ -136,6 +136,7 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
        <include name="lib/xalanj1compat.jar"/>
        <include name="lib/batik.jar"/>
        <include name="lib/logkit-1.0b4.jar"/>
+       <include name="lib/avalon-framework-4.0.jar"/>
        <include name="lib/jimi*"/>
     </fileset>
 
@@ -278,7 +279,7 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
     <taskdef name="runTest" classname="org.apache.fop.tools.anttasks.RunTest"/>
 
     <property name="main.class" value="org.apache.fop.apps.Fop"/>
-    <property name="runtime.classpath" value="lib/xerces-1.2.3.jar lib/xalan-2.0.0.jar lib/xalanj1compat.jar lib/batik.jar lib/jimi-1.0.jar lib/logkit-1.0b4.jar"/>
+    <property name="runtime.classpath" value="lib/xerces-1.2.3.jar lib/xalan-2.0.0.jar lib/xalanj1compat.jar lib/batik.jar lib/jimi-1.0.jar lib/logkit-1.0b4.jar lib/avalon-framework-4.0.jar"/>
    
     <filter filtersfile="${build.src}/codegen/filter"/>
 
@@ -576,9 +577,9 @@ Sometimes ant gives out this warnings, but the build is finished without any pro
   <target name="test" depends="package">
     <echo message="Testing build in jar file ${build.dir}/${name}.jar against reference"/>
     <runTest testSuite="basictests.xml" basedir="test/" reference="test/reference/fop.jar"
-         refVersion="FOP 0.19.0-CVS"/>
+         refVersion="FOP 0.20.1"/>
     <runTest testSuite="bugtests.xml" basedir="test/" reference="test/reference/fop.jar"
-         refVersion="FOP 0.19.0-CVS"/>
+         refVersion="FOP 0.20.1"/>
 <!--
     <runTest testSuite="testsuite.xml" basedir="TestSuite/NIST/" reference="test/reference/fop.jar"
          refVersion="FOP 0.19.0-CVS"/>
