some minor updates, no longer need ant optional
git-svn-id: https://svn.apache.org/repos/asf/xmlgraphics/fop/trunk@194457 13f79535-47bb-0310-9956-ffa450edef68

--- a/docs/design/build.xml
+++ b/docs/design/build.xml
@@ -12,6 +12,7 @@
 	
 		<property name="lib.dir" value="${basedir}/lib"/>
 
+      <taskdef name="xslt" classname="org.apache.fop.tools.anttasks.Xslt"/>
       <taskdef name="fop" classname="org.apache.fop.tools.anttasks.Fop"/>
     </target>
   
@@ -42,11 +43,16 @@
   <target name="pdf" depends="prepare">
     <echo message="Building pdf documentation. Please wait ..."/>
     <delete file="fop.fo"/>
+    <xslt infile="fop.xml" xsltfile="docbook/fo/docbook.xsl"
+        dependent="fop.xml"
+        outfile="fop.fo" smart="yes"/>
+<!--
     <style basedir="./" 
            destdir="./" 
            style="docbook/fo/docbook.xsl" 
            extension=".fo" 
            includes="fop.xml"/>
+-->
     <fop fofile="fop.fo" pdffile="fop.pdf"/>
 <!--    <delete file="fop.fo"/>-->
   </target>
